# fxplc

./: LICENSE.txt  README.md  check_mypy.sh  cli.py  fxplc.py  mypy.ini  pyproject.toml  requirements_dev.txt  vars-demo.yaml
src/fxplc/cli/: main.py
src/fxplc/client/: FXPLCClient.py  FXPLCClientMock.py  errors.py  number_type.py
src/fxplc/http_server/: __main__.py  aux_server.py  exceptions.py  frontend_ui.py  js_helpers.py  mytypes.py  processor.py  requirements.txt  server.py  transport.py  utils.py
src/fxplc/transports/: ITransport.py  TransportNull.py  TransportSerial.py  TransportTCP.py
transports/: ITransport.py  TransportSerial.py
